--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -1416,4 +1416,8 @@
 
     <!-- bool value to for enabling motion accelerometer -->
     <bool name="use_motion_accel">false</bool>
+
+    <!-- set to false if we dont need to consider data
+         service state to display signal strength bars -->
+    <bool name="config_combined_signal">true</bool>
 </resources>
