LegacyUSB: Squashed commit with updates for 4.2
LegacyUSB: add overlay for UMS lun and use existence of lun to enable legacy USB

LegacyUSB: Add support for legacy USB implementations

Rebased for ICS 4.0.3

Option to hide Adb notification icon (framework) - authorship belongs to Rick C

Change-Id: Id14f70f7e21b689c08cadef69f69da711c7dc566

--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -1296,9 +1296,17 @@
         <item>353</item>
     </string-array>
 
+    <!--------------- AOSPA LEGACY ADDITIONS --------------->
+
     <!-- Workaround for devices with broken keyboards -->
     <bool name="config_forceDisableHardwareKeyboard">false</bool>
 
     <!-- Boolean to enable stk functionality on Samsung phones -->
     <bool name="config_samsung_stk">false</bool>
+
+    <!-- LUN file to be used by legacy USB manager.
+         The existence of this file will be used to determine in the
+         legacy USB manager should be started. -->
+    <string name="config_legacyUmsLunFile">/sys/devices/platform/usb_mass_storage/lun0/file</string>
+
 </resources>
