Add SMS Middleware layer.
Add fix so ordered broadcasts are delivered to system
apps first in the event of a tie. This works around
the issue where terrible apps steal SMS notifications
from the broadcast queue to simply prevent notifications
that could otherwise be removed by a toggle.

Change-Id: I30e38c6c27d339d55a8f9a0f4106185356a9b9a0

Conflicts:
	core/res/res/values/cm_strings.xml

Conflicts:
	packages/SystemUI/res/values/pa_strings.xml

PS2: move strings

--- a/core/res/res/values/pa_strings.xml
+++ b/core/res/res/values/pa_strings.xml
@@ -39,4 +39,12 @@
 
     <!-- Label for item that screenshots in device options dialog -->
     <string name="global_action_screenshot">Screenshot</string>
+
+    <!-- Permission: Intercept SMS -->
+    <string name="permlab_interceptSmsSent">intercept outgoing SMS</string>
+    <!-- Permission: Description for the Intercept SMS permission used by VoicePlus -->
+    <string name="permdesc_interceptSmsSent">Allows the app to
+        intercept an outgoing SMS.
+        Malicious apps may use this to prevent outgoing SMS messages.</string>
+
 </resources>
