--- a/core/res/res/values/pa_strings.xml
+++ b/core/res/res/values/pa_strings.xml
@@ -41,4 +41,10 @@
 
     <!-- Label for item that screenshots in device options dialog -->
     <string name="global_action_screenshot">Screenshot</string>
+
+    <string name="permlab_interceptSmsSent">intercept outgoing SMS</string>
+    <!-- Description of an application permission, listed so the user can choose whether they want to allow the application to do this. -->
+    <string name="permdesc_interceptSmsSent">Allows the app to
+        intercept an outgoing SMS.
+        Malicious apps may use this to prevent outgoing SMS messages.</string>
 </resources>
