Allow ADB to be enabled by default via a config overlay
This is useful for developers that are testing and troubleshooting boot issues.
This should only be used for testing and removed once a device is able to
boot.

Change-Id: Ib17d4e10ec68640ce55a91d5b1067d3d37eeec9d

Conflicts:
	core/res/res/values/config.xml

--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -1305,4 +1305,7 @@
         <item>333</item>
         <item>353</item>
     </string-array>
+
+    <!-- Boolean to enable adb by default on a per-device basis -->
+    <bool name="config_enableAdbByDefault">false</bool>
 </resources>
