Sensor: Enable the motion accelerometer for screen orientation change
The screen orientation can be detected by the motion accelerometer
instead of generic accelerometer to save power.

Change-Id: Iaeb3e5958d2ef7cc33080d7091ed8a5462695c67

Conflicts:
	core/res/res/values/config.xml
	core/res/res/values/symbols.xml

--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -1408,4 +1408,7 @@
     <!-- Timeout in MS for how long you have to long-press the back key to
          kill the foreground app. -->
     <integer name="config_backKillTimeout">1000</integer>
+
+    <!-- bool value to for enabling motion accelerometer -->
+    <bool name="use_motion_accel">false</bool>
 </resources>
