telephony: disable the use of SMS_EXPECT_MORE by default (1/2)
CodeAurora added the use of the RIL_REQUEST_SEND_SMS_EXPECT_MORE API
which is not supported by every RIL. Disabled it by default to reflect
AOSP behavior and added a flag to enable it.

Change-Id: I837c161bbca3960e7458ea049f896218d5e60a63

Conflicts:
	core/res/res/values/symbols.xml

--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -1838,4 +1838,6 @@
 
   <java-symbol type="string" name="config_partial_segment_expire_age" />
 
+  <!-- SMS RIL_REQUEST_SEND_SMS_EXPECT_MORE -->
+  <java-symbol type="bool" name="config_smsUseExpectMore" />
 </resources>
