--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -1749,5 +1749,5 @@
 
   <java-symbol type="bool" name="config_forceDisableHardwareKeyboard" />
   <java-symbol type="bool" name="config_smsSamsungCdmaAlternateMessageIDEncoding" />
-
+  <java-symbol type="bool" name="config_samsung_stk" />
 </resources>
