--- a/core/res/res/values/arrays.xml
+++ b/core/res/res/values/arrays.xml
@@ -346,4 +346,26 @@
         <item>中文 (繁體)</item>
     </string-array>
 
+    <!-- Defines the shutdown options shown in the reboot dialog. -->
+    <string-array name="shutdown_reboot_options" translatable="false">
+        <item>@string/reboot_reboot</item>
+        <item>@string/reboot_recovery</item>
+        <item>@string/reboot_fastboot</item>
+    </string-array>
+
+    <!-- Do not translate. Defines the shutdown actions passed to the kernel.
+         The first item should be empty for regular reboot. -->
+    <string-array name="shutdown_reboot_actions" translatable="false">
+        <item></item>
+        <item>recovery</item>
+        <item>bootloader</item>
+    </string-array>
+
+    <array name="shutdown_reboot_icons">
+        <item>@drawable/ic_lock_reboot</item>
+        <item>@drawable/ic_lock_reboot_recovery</item>
+        <item>@drawable/ic_lock_reboot_bootloader</item>
+    </array>
+
+    
 </resources>
