Global actions cleanup
Also include spanish translations

Patchset 2: Fix build
Patchset 3: Add message to confirmation dialog

Change-Id: I09bf56374a5ba9a875b94a53845be99a347417dc

--- a/core/res/res/values/pa_symbols.xml
+++ b/core/res/res/values/pa_symbols.xml
@@ -16,7 +16,6 @@
 */
 -->
 <resources>
-
   <!-- From power menu -->
   <java-symbol type="array" name="shutdown_reboot_options" />
   <java-symbol type="array" name="shutdown_reboot_actions" />
@@ -29,6 +28,6 @@
   <java-symbol type="string" name="global_action_reboot" />
   <java-symbol type="string" name="global_action_screenshot" />
   <java-symbol type="string" name="reboot_system" />
+  <java-symbol type="string" name="reboot_confirm" />
   <java-symbol type="string" name="reboot_progress" />
-
 </resources>
