--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -1370,4 +1370,7 @@
          config to 7. -->
     <integer name="config_deviceHardwareKeys">15</integer>
 
+    <!-- Timeout in MS for how long you have to long-press the back key to
+         kill the foreground app. -->
+    <integer name="config_backKillTimeout">1000</integer>
 </resources>
