--- a/packages/SystemUI/res/values-es/pa_strings.xml
+++ b/packages/SystemUI/res/values-es/pa_strings.xml
@@ -17,6 +17,5 @@
  */
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <!--Screenshot delete -->
-    <string name="delete">Delete</string>
+    <string name="delete">Borrar</string>
 </resources>
