Screenshot Delete: Fix string key naming
Change-Id: I9440d21a1d638f87e0deb26af140d632eec1e7b8
Signed-off-by: Evan Anderson <evan1124@gmail.com>

--- a/packages/SystemUI/res/values/pa_strings.xml
+++ b/packages/SystemUI/res/values/pa_strings.xml
@@ -18,5 +18,5 @@
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!--Screenshot delete -->
-    <string name="delete">Delete</string>
+    <string name="screenshot_delete_action">Delete</string>
 </resources>
