--- a/packages/SystemUI/res/values-es/pa_strings.xml
+++ b/packages/SystemUI/res/values-es/pa_strings.xml
@@ -17,5 +17,6 @@
  */
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <string name="delete">Borrar</string>
+    <!--Screenshot delete -->
+    <string name="screenshot_delete_action">Borrar</string>
 </resources>
