Screenshot & Screenrecord: Create Intents & Permissions
    * New Intents ACTION_SCREENSHOT | ACTION_SCREENRECORD
    * Protected broadcasts (protectionLevel:signatureOrSystem)
    * Enable screen recording via power menu
    * Clean-up redundant screenshot code

Change-Id: Ia7fbdb911014f62d138c4d0a5d942c08d73d88e6

--- a/core/res/res/values/pa_strings.xml
+++ b/core/res/res/values/pa_strings.xml
@@ -39,4 +39,7 @@
 
     <!-- Label for item that screenshots in device options dialog -->
     <string name="global_action_screenshot">Screenshot</string>
+    
+    <!-- Label for item that screenrecords in device options dialog -->
+    <string name="global_action_screenrecord">Screen Record</string>
 </resources>
