--- a/core/res/res/values/pa_symbols.xml
+++ b/core/res/res/values/pa_symbols.xml
@@ -16,17 +16,19 @@
 */
 -->
 <resources>
-  <!-- From power menu -->
-  <java-symbol type="array" name="shutdown_reboot_options" />
-  <java-symbol type="array" name="shutdown_reboot_actions" />
-  <java-symbol type="array" name="shutdown_reboot_icons" />
-  <java-symbol type="drawable" name="ic_lock_reboot" />
-  <java-symbol type="drawable" name="ic_lock_reboot_recovery" />
-  <java-symbol type="drawable" name="ic_lock_reboot_bootloader" />
-  <java-symbol type="drawable" name="ic_lock_screenshot" />
-  <java-symbol type="string" name="global_actions" />
-  <java-symbol type="string" name="global_action_reboot" />
-  <java-symbol type="string" name="global_action_screenshot" />
-  <java-symbol type="string" name="reboot_confirm" />
-  <java-symbol type="string" name="reboot_progress" />
+    <!-- From power menu -->
+    <java-symbol type="array" name="shutdown_reboot_options" />
+    <java-symbol type="array" name="shutdown_reboot_actions" />
+    <java-symbol type="array" name="shutdown_reboot_icons" />
+    <java-symbol type="drawable" name="ic_lock_reboot" />
+    <java-symbol type="drawable" name="ic_lock_reboot_recovery" />
+    <java-symbol type="drawable" name="ic_lock_reboot_bootloader" />
+    <java-symbol type="drawable" name="ic_lock_screenshot" />
+    <java-symbol type="drawable" name="ic_lock_screenrecord" />
+    <java-symbol type="string" name="global_actions" />
+    <java-symbol type="string" name="global_action_reboot" />
+    <java-symbol type="string" name="global_action_screenshot" />
+    <java-symbol type="string" name="global_action_screenrecord" />
+    <java-symbol type="string" name="reboot_confirm" />
+    <java-symbol type="string" name="reboot_progress" />
 </resources>
