Update immersive confirmation.
1. Disable panic mechanism for expanded desktop.
2. Separate confirmation for each expanded desktop style.
3. Add new layout for the case when navigation
   bar is hidden but statusbar is visible.

PS1: Adapt to our immersive and fix conflicts.
PS2: ???
PS3: Hopefully restore previous state.
PS4: Spanish translations

Signed-off-by: Carlo Savignano <stevewatersy@gmail.com>
Change-Id: I5914d655bd5f9315ac4cc6fc7d70cc4ee45bb7b2

--- a/core/res/res/values-es/pa_strings.xml
+++ b/core/res/res/values-es/pa_strings.xml
@@ -29,4 +29,5 @@
     <string name="global_action_screenshot">Captura de pantalla</string>
     <string name="setting_confirmation_ask_me_later">Más tarde</string>
     <string name="setting_confirmation_yes">Si</string>
+    <string name="immersive_mode_confirmation_bottom">Desliza el dedo hacia arriba para salir de la pantalla completa.</string>
 </resources>
