--- a/packages/SystemUI/res/layout/status_bar.xml
+++ b/packages/SystemUI/res/layout/status_bar.xml
@@ -105,11 +105,10 @@
                     />
                 <com.android.systemui.BatteryCircleMeterView
                     android:id="@+id/circle_battery"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="16dp"
+                    android:layout_width="10.5dp"
                     android:textAppearance="@style/TextAppearance.StatusBar.Battery"
-                    android:singleLine="true"
-                    android:gravity="bottom"
+                    android:layout_marginBottom="2px"
                     android:paddingLeft="4dip"
                     systemui:batteryView="statusbar"
                     />
