--- a/packages/SystemUI/res/values/pa_strings.xml
+++ b/packages/SystemUI/res/values/pa_strings.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+e<?xml version="1.0" encoding="utf-8"?>
 <!--
 /**
  * Copyright (C) 2013, ParanoidAndroid Project
@@ -26,4 +26,6 @@
     <string name="quick_settings_immersive_mode_label">Immersive</string>
     <!-- QuickSettings: Immersive mode (Off) [CHAR LIMIT=NONE] -->
     <string name="quick_settings_immersive_mode_off_label">Immersive Off</string>
+    <!-- QuickSettings: Lightbulb Tile  -->
+    <string name="quick_settings_lightbulb_label">Bulb</string>
 </resources>
