SystemUI: Add double tap to sleep gesture
Change-Id: I4c54718e8ec8774677d13917b3a7ffa3b4b18cb5

--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -1305,4 +1305,8 @@
         <item>333</item>
         <item>353</item>
     </string-array>
+    
+    <!-- Enable statusbar double tap gesture to put device to sleep -->
+    <bool name="config_disableDoubleTapSleepGesture">false</bool>
+
 </resources>
