--- a/packages/SystemUI/res/values/pa_strings.xml
+++ b/packages/SystemUI/res/values/pa_strings.xml
@@ -42,4 +42,6 @@
     <!-- USB Tether Tile [CHAR LIMIT=NONE] -->
     <string name="quick_settings_usb_tether_connected_label">USB Tethering off</string>
     <string name="quick_settings_usb_tether_on_label">USB Tethering</string>
+    <!-- QuickSettings: Power Menu Tile  -->
+    <string name="quick_settings_powermenu_label">Power menu</string>
 </resources>
