--- a/packages/SystemUI/res/values/arrays.xml
+++ b/packages/SystemUI/res/values/arrays.xml
@@ -21,7 +21,11 @@
     
     <array name="navbar_search_targets">
         <item>@null</item>
+        <item>@drawable/ic_action_camera</item>
         <item>@*android:drawable/ic_action_assist_generic</item>
+        <item>@drawable/ic_action_torch</item>
+        <item>@null</item>
+        <item>@null</item>
         <item>@null</item>
         <item>@null</item>
     </array>
@@ -29,6 +33,10 @@
     <array name="navbar_search_target_descriptions">
         <item>@null</item>
         <item>@*android:string/description_target_search</item>
+        <item>@*android:string/description_target_search</item>
+        <item>@*android:string/description_target_search</item>
+        <item>@null</item>
+        <item>@null</item>
         <item>@null</item>
         <item>@null</item>
     </array>
@@ -36,6 +44,10 @@
     <array name="navbar_search_direction_descriptions">
         <item>@null</item>
         <item>@*android:string/description_direction_up</item>
+        <item>@*android:string/description_direction_up</item>
+        <item>@*android:string/description_direction_up</item>
+        <item>@null</item>
+        <item>@null</item>
         <item>@null</item>
         <item>@null</item>
     </array>
