--- a/packages/SystemUI/res/values-es/pa_strings.xml
+++ b/packages/SystemUI/res/values-es/pa_strings.xml
@@ -23,19 +23,22 @@
     <string name="screenshot_delete_confirmation">Captura de pantalla eliminada</string>
     <string name="quick_settings_immersive_mode_label">Inmersión</string>
     <string name="quick_settings_immersive_mode_off_label">Inmersión desactivada</string>
-    <!-- QuickSettings: LTE On [CHAR LIMIT=NONE] -->
     <string name="quick_settings_lte">LTE</string>
-    <!-- QuickSettings: LTE Off [CHAR LIMIT=NONE] -->
     <string name="quick_settings_lte_off">LTE desactivado</string>
-    <!-- QuickSettings: Mobile Network (2G/3G) [CHAR LIMIT=NONE] -->
     <string name="quick_settings_network_type">Red</string>
     <string name="quick_settings_network_unknown">Desconocido</string>
-    <!-- QuickSettings: Lightbulb tile [CHAR LIMIT=NONE] -->
     <string name="quick_settings_lightbulb_label">Linterna</string>
     <string name="quick_settings_lightbulb_off_label">Linterna desactivada</string>
-    <!-- QuickSettings: Sleep Tile [CHAR LIMIT=NONE] -->
     <string name="quick_settings_sleep_label">Bloquear</string>
-    <!-- USB Tether Tile [CHAR LIMIT=NONE] -->
     <string name="quick_settings_usb_tether_connected_label">Anclaje USB desactivado</string>
     <string name="quick_settings_usb_tether_on_label">Anclaje USB</string>
+    <string name="quick_settings_sleep_action_label">Bloquear</string>
+    <string name="quick_settings_wifi_ap_label">Zona Wi-Fi</string>
+    <string name="quick_settings_wifi_ap_off_label">Zona Wi-Fi desactivada</string>
+    <string name="quick_settings_bluetooth_not_discoverable_label">No detectable</string>
+    <string name="quick_settings_bluetooth_discoverable_label">Detectable</string>
+    <string name="quick_settings_bluetooth_disabled">Desactivado</string>
+    <string name="quick_settings_location_mode_high_label">Alta</string>
+    <string name="quick_settings_location_mode_battery_label">Batería</string>
+    <string name="quick_settings_location_mode_sensors_label">Dispositivo</string>
 </resources>
