--- a/packages/SystemUI/res/layout/quick_settings_switch_button.xml
+++ b/packages/SystemUI/res/layout/quick_settings_switch_button.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2012 The Android Open Source Project
+<!-- Copyright (C) 2014 The ParanoidAndroid Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -12,20 +12,18 @@
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
      See the License for the specific language governing permissions and
      limitations under the License.
- -->
-
-<com.android.systemui.statusbar.phone.QuickSettingsScrollView
+-->
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="@dimen/close_handle_underlap"
-    android:overScrollMode="ifContentScrolls"
-    >
-    <com.android.systemui.statusbar.phone.QuickSettingsContainerView
-        android:id="@+id/quick_settings_container"
-        android:layout_width="match_parent"
+    android:layout_width="@dimen/qs_dual_tile_switch_icon_size"
+    android:layout_height="@dimen/qs_dual_tile_switch_icon_size"
+    android:layout_gravity="top|right">
+    <ImageView
+        android:id="@+id/switch_button_image"
+        android:src="@+drawable/ic_qs_dual_switch"
+        android:visibility="gone"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:animateLayoutChanges="true"
-        android:columnCount="@integer/quick_settings_num_columns"
+        android:scaleType="fitXY"
         />
-</com.android.systemui.statusbar.phone.QuickSettingsScrollView>
+</RelativeLayout>
