--- a/packages/SystemUI/res/values/pa_strings.xml
+++ b/packages/SystemUI/res/values/pa_strings.xml
@@ -24,9 +24,12 @@
     <string name="screenshot_delete_action">Delete</string>
     <string name="screenshot_delete_confirmation">Screenshot deleted</string>
     <!-- QuickSettings: Immersive mode [CHAR LIMIT=NONE] -->
-    <string name="quick_settings_immersive_mode_label">Immersive</string>
+    <string name="quick_settings_immersive_mode_full_label">Immersive</string>
     <!-- QuickSettings: Immersive mode (Off) [CHAR LIMIT=NONE] -->
     <string name="quick_settings_immersive_mode_off_label">Immersive Off</string>
+    <!-- QuickSettings: Immersive extra modes [CHAR LIMIT=NONE] -->
+    <string name="quick_settings_immersive_mode_navbar_hidden_label">Navigation bar</string>
+    <string name="quick_settings_immersive_mode_statusbar_hidden_label">Status bar</string>
     <!-- QuickSettings: LTE On [CHAR LIMIT=NONE] -->
     <string name="quick_settings_lte">LTE</string>
     <!-- QuickSettings: LTE Off [CHAR LIMIT=NONE] -->
@@ -36,10 +39,29 @@
     <string name="quick_settings_network_unknown">Unknown</string>
     <!-- QuickSettings: Lightbulb tile [CHAR LIMIT=NONE] -->
     <string name="quick_settings_lightbulb_label">Lightbulb</string>
-    <string name="quick_settings_lightbulb_off_label">Lightbulb off</string>
-    <!-- QuickSettings: Sleep Tile [CHAR LIMIT=NONE] -->
-    <string name="quick_settings_sleep_label">Sleep</string>
+    <string name="quick_settings_lightbulb_off_label">Lightbulb Off</string>
     <!-- USB Tether Tile [CHAR LIMIT=NONE] -->
-    <string name="quick_settings_usb_tether_connected_label">USB Tethering off</string>
+    <string name="quick_settings_usb_tether_connected_label">USB Tethering Off</string>
     <string name="quick_settings_usb_tether_on_label">USB Tethering</string>
+    <!-- QuickSettings: Sleep Tile [CHAR LIMIT=NONE] -->
+    <string name="quick_settings_sleep_action_label">Sleep</string>
+    <string name="quick_settings_sleep_time_15_label">15s</string>
+    <string name="quick_settings_sleep_time_30_label">30s</string>
+    <string name="quick_settings_sleep_time_60_label">60s</string>
+    <string name="quick_settings_sleep_time_120_label">2m</string>
+    <string name="quick_settings_sleep_time_300_label">5m</string>
+    <string name="quick_settings_sleep_time_600_label">10m</string>
+    <string name="quick_settings_sleep_time_1800_label">30m</string>
+    <string name="quick_settings_sleep_time_unknown_label">@string/quick_settings_network_unknown</string>
+    <!-- QuickSettings: Wifi AP Tile [CHAR LIMIT=NONE] -->
+    <string name="quick_settings_wifi_ap_label">Wi-Fi AP</string>
+    <string name="quick_settings_wifi_ap_off_label">Wi-Fi AP Off</string>
+    <!-- Quick Settings Bluetooth Extra Tile [CHAR LIMIT=NONE] -->
+    <string name="quick_settings_bluetooth_not_discoverable_label">Not discoverable</string>
+    <string name="quick_settings_bluetooth_discoverable_label">Discoverable</string>
+    <string name="quick_settings_bluetooth_disabled">Disabled</string>
+    <!-- Quick Settings Location Extra Tile [CHAR LIMIT=NONE] -->
+    <string name="quick_settings_location_mode_high_label">High</string>
+    <string name="quick_settings_location_mode_battery_label">Battery</string>
+    <string name="quick_settings_location_mode_sensors_label">Device</string>
 </resources>
