--- a/packages/SystemUI/res/values/pa_strings.xml
+++ b/packages/SystemUI/res/values/pa_strings.xml
@@ -36,9 +36,23 @@
     <!-- QuickSettings: Lightbulb tile [CHAR LIMIT=NONE] -->
     <string name="quick_settings_lightbulb_label">Lightbulb</string>
     <string name="quick_settings_lightbulb_off_label">Lightbulb off</string>
-    <!-- QuickSettings: Sleep Tile [CHAR LIMIT=NONE] -->
-    <string name="quick_settings_sleep_label">Sleep</string>
     <!-- USB Tether Tile [CHAR LIMIT=NONE] -->
     <string name="quick_settings_usb_tether_connected_label">Tethering off</string>
-    <string name="quick_settings_usb_tether_on_label">Tethering on</string>
+    <!-- QuickSettings: Sleep Tile [CHAR LIMIT=NONE] -->
+    <string name="quick_settings_sleep_label_front">Sleep</string>
+    <string name="quick_settings_sleep_label_back_15">15s</string>
+    <string name="quick_settings_sleep_label_back_30">30s</string>
+    <string name="quick_settings_sleep_label_back_60">60s</string>
+    <string name="quick_settings_sleep_label_back_120">2m</string>
+    <string name="quick_settings_sleep_label_back_300">5m</string>
+    <string name="quick_settings_sleep_label_back_600">10m</string>
+    <string name="quick_settings_sleep_label_back_1800">30m</string>
+    <!-- QuickSettings: Wifi AP Tile [CHAR LIMIT=NONE] -->
+    <string name="quick_settings_wifi_ap_label">Wi-Fi AP</string>
+    <string name="quick_settings_wifi_ap_off_label">Wi-Fi AP Off</string>
+    <!-- Quick Settings Bluetooth Extra Tile [CHAR LIMIT=NONE] -->
+    <string name="quick_settings_bluetooth_not_discoverable_label">Not discoverable</string>
+    <string name="quick_settings_bluetooth_discoverable_label">Discoverable</string>
+    <string name="quick_settings_bluetooth_disabled">Disabled</string>
+    <string name="quick_settings_bluetooth_number_paired"><xliff:g id="number">%d</xliff:g> Devices paired</string>
 </resources>
