--- a/packages/SystemUI/res/values/pa_strings.xml
+++ b/packages/SystemUI/res/values/pa_strings.xml
@@ -40,6 +40,6 @@
     <!-- QuickSettings: Sleep Tile [CHAR LIMIT=NONE] -->
     <string name="quick_settings_sleep_label">Sleep</string>
     <!-- USB Tether Tile [CHAR LIMIT=NONE] -->
-    <string name="quick_settings_usb_tether_connected_label">Tethering off</string>
-    <string name="quick_settings_usb_tether_on_label">Tethering on</string>
+    <string name="quick_settings_usb_tether_connected_label">USB Tethering off</string>
+    <string name="quick_settings_usb_tether_on_label">USB Tethering</string>
 </resources>
