--- a/packages/SystemUI/res/values-es/pa_strings.xml
+++ b/packages/SystemUI/res/values-es/pa_strings.xml
@@ -20,6 +20,22 @@
     <string name="quick_settings_battery_charging">Cargando</string>
     <string name="quick_settings_battery_discharging">Descargando</string>
     <string name="screenshot_delete_action">Borrar</string>
+    <string name="screenshot_delete_confirmation">Captura de pantalla eliminada</string>
     <string name="quick_settings_immersive_mode_label">Inmersión</string>
     <string name="quick_settings_immersive_mode_off_label">Inmersión desactivada</string>
+    <!-- QuickSettings: LTE On [CHAR LIMIT=NONE] -->
+    <string name="quick_settings_lte">LTE</string>
+    <!-- QuickSettings: LTE Off [CHAR LIMIT=NONE] -->
+    <string name="quick_settings_lte_off">LTE desactivado</string>
+    <!-- QuickSettings: Mobile Network (2G/3G) [CHAR LIMIT=NONE] -->
+    <string name="quick_settings_network_type">Red</string>
+    <string name="quick_settings_network_unknown">Desconocido</string>
+    <!-- QuickSettings: Lightbulb tile [CHAR LIMIT=NONE] -->
+    <string name="quick_settings_lightbulb_label">Linterna</string>
+    <string name="quick_settings_lightbulb_off_label">Linterna desactivada</string>
+    <!-- QuickSettings: Sleep Tile [CHAR LIMIT=NONE] -->
+    <string name="quick_settings_sleep_label">Bloquear</string>
+    <!-- USB Tether Tile [CHAR LIMIT=NONE] -->
+    <string name="quick_settings_usb_tether_connected_label">Anclaje USB desactivado</string>
+    <string name="quick_settings_usb_tether_on_label">Anclaje USB</string>
 </resources>
