Configurable volume panel style (1/2)
- We can set:
1 - Single
2 - Expandable
3 - Expanded
4 - None

Original commit: d628aa068e0530070767b42f7c63c98c8f0fc446
Thanks to @StevenHarperUK

Change-Id: Ib69100346f5c9bc93204fc4b585798d0b5a18f93

--- a/packages/SettingsProvider/res/values/defaults.xml
+++ b/packages/SettingsProvider/res/values/defaults.xml
@@ -79,6 +79,9 @@
     <bool name="def_device_provisioned">false</bool>
     <integer name="def_dock_audio_media_enabled">1</integer>
 
+    <!-- type of volume overlay - Deaults to -1 so that detection occurs on first load -->
+    <integer name="def_volume_overlay_mode">-1</integer>
+
     <!-- Notifications use ringer volume -->
     <bool name="def_notifications_use_ring_volume">true</bool>
 
