Lightbulb QS changes: Simple press - Only colapse panels when realy need - Colpase panel if device do not support led flash and toast a message - Do not start a intent without need
Long press
- If device do not support led flashing don't open the app. Instead colapse panel and show a toast message
- If supports than open the app

Change-Id: Ia46e283a16c5629ff0dcac7b8db406feaf4a5c07

--- a/packages/SystemUI/res/values/pa_strings.xml
+++ b/packages/SystemUI/res/values/pa_strings.xml
@@ -42,4 +42,7 @@
     <!-- USB Tether Tile [CHAR LIMIT=NONE] -->
     <string name="quick_settings_usb_tether_connected_label">USB Tethering off</string>
     <string name="quick_settings_usb_tether_on_label">USB Tethering</string>
+
+    <!-- Lightbulb message -->
+    <string name="lightbulb_message">Device do not support led flash light</string>
 </resources>
