[1/2] Frameworks: Add in-the-spot user preference dialog
This is a new way to setup your device, more intuitively, without diving into a sea of a hundred of menus
The basic idea is taken from TouchWiz roms (here: http://goo.gl/W40rF6)
Also create a helper class for implementing this easier all around the ROM and implement it for first time on Quick Pull down

Drawables by Arz Bhatia

PS2: Code style fixes

Change-Id: I95695a8cbbfea7740b6417ff9ba9ef84e0b7cdd7

--- a/packages/SystemUI/res/values-es/pa_strings.xml
+++ b/packages/SystemUI/res/values-es/pa_strings.xml
@@ -21,6 +21,8 @@
     <string name="quick_settings_battery_discharging">Descargando</string>
     <string name="screenshot_delete_action">Borrar</string>
     <string name="screenshot_delete_confirmation">Captura de pantalla eliminada</string>
+    <string name="quick_settings_quick_pull_down_title">Despliegue rápido</string>
+    <string name="quick_settings_quick_pull_down_message">¿Le gustaría que el borde de la barra de notificaciones despliegue el panel de ajustes rápidos?</string>
     <string name="quick_settings_immersive_mode_label">Inmersión</string>
     <string name="quick_settings_immersive_mode_off_label">Inmersión desactivada</string>
     <!-- QuickSettings: LTE On [CHAR LIMIT=NONE] -->
