Quicksettings: Sound tile
Dual Ringer & Volume tile.

* Click on front goes to next ringer mode (silent, vibration, sound).
* Click on back goes to volume change.
* Long click goes to sound settings.
* Handles Vibrate when ringing.

Screencast: http://www.youtube.com/watch?v=gqlPhRBruSU

Based on commit: https://gerrit.paranoidandroid.co/#/c/522/ by cristianomatos.

PS2: Removed tabs.

Change-Id: Ida4b0f05e8a886b5249d758f1efb36bb364275cf

--- a/packages/SystemUI/res/values/pa_strings.xml
+++ b/packages/SystemUI/res/values/pa_strings.xml
@@ -71,4 +71,10 @@
     <string name="quick_settings_location_mode_high_label">High</string>
     <string name="quick_settings_location_mode_battery_label">Battery</string>
     <string name="quick_settings_location_mode_sensors_label">Device</string>
+    <!-- QuickSettings: Sound Tile  -->
+    <string name="quick_settings_ringer_mode_silent_label">Silent</string>
+    <string name="quick_settings_ringer_mode_vibrate_label">Vibration</string>
+    <string name="quick_settings_ringer_mode_normal_label">Sound</string>
+    <string name="quick_settings_ringer_mode_normal_vibrate_label">Sound &amp; Vibration</string>
+    <string name="quick_settings_volume_label">Volume</string>
 </resources>
